# lesson_29_homework

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  mapreduce.cpp  mapreduce.h  test.cpp  test_input.txt
